# forecasting-workflow

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: transformer_demo.ipynb
scripts/geographic_product_demand/: data_analysis.ipynb
scripts/healthcare_no_show/: csv2sql.ipynb  csv2sql_healthcare_no_show.ipynb  data_analysis.ipynb  data_analysis_healthcare_no_show.ipynb  dataset_prep.ipynb  dataset_prep_healthcare_no_show.ipynb  modeling.ipynb  modeling_healthcare_no_show.ipynb  readme.md
scripts/scheduling/: csv2sql.ipynb  healthcare_no_show.ipynb  healthcare_no_show_ml.ipynb  sql.ipynb  transformer_demo.ipynb
src/: dataset.py  plotting.py  utils.py
src/models/: fttransformer.py  logistic_regression.py  mlp.py
tests/: test_utils.py
